[package]
name = "xcov"
description = "Knuth's Algorithm X (dancing links) for solving exact cover problems"
repository = "https://github.com/jw013/exact-cover-rs"
keywords = ["exact-cover", "dlx", "dancing-links"]
categories = ["algorithms", "mathematics"]
version = "0.3.0"
edition = "2021"
license = "MPL-2.0"

[[example]]
name = "sudoku"
test = true
